--- a/_includes/post-list-item.html
+++ b/_includes/post-list-item.html
@@ -1,35 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
-  <meta name="Generator" content="Cocoa HTML Writer">
-  <meta name="CocoaVersion" content="2113">
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px Courier; -webkit-text-stroke: #000000}
-    span.s1 {font-kerning: none}
-  </style>
-</head>
-<body>
-<p class="p1"><span class="s1">&lt;li&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;a href="{{ post.url | absolute_url }}" class="post-link"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;div class="post-link__heading"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{% unless post.title == "" %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;h1 class="post-link__title"&gt; <span class="Apple-converted-space">     </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>{{ post.title }}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;/h1&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{% else %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% include post-excerpt.html %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{% endunless %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{% if post.title != "" and site.show_excerpts == true %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>{% include post-excerpt.html %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{% endif %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;span class="post-date"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{{ post.date | date: "%b %-d, '%y" }}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;/span&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/a&gt;</span></p>
-<p class="p1"><span class="s1">&lt;/li&gt;</span></p>
-</body>
-</html>
+<li>
+  <a href="{{ post.url | absolute_url }}" class="post-link">
+    <div class="post-link__heading">
+      {% unless post.title == "" %}
+          <h1 class="post-link__title">      
+            {{ post.title }}
+          </h1>
+      {% else %}
+        {% include post-excerpt.html %}
+      {% endunless %}
+      {% if post.title != "" and site.show_excerpts == true %}
+        {% include post-excerpt.html %}
+      {% endif %}
+    </div>
+    <span class="post-date">
+      {{ post.date | date: "%b %-d, '%y" }}
+    </span>
+  </a>
+</li>
